--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -15,19 +15,22 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 15vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(8px + 2vmin);
   color: white;
+  margin-bottom: 20px;
 }
 
 .App-link {
   color: #61dafb;
 }
-
+.money {
+  text-align: left;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
